Added a privacy page

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -10,7 +10,7 @@
   </div>
   <hr />
   <span id="plusone" class="text-sm">
-    Did you like this post? <a id="saythanks" href="#liked">Click here</a> to let me know anonymously or <a href="/privacy">see for yourself</a> if you don't believe me. Either way, thanks for reading!
+    Did you like this post? <a id="saythanks" href="#liked">Click here</a> to let me know anonymously or <a href="/privacy">see some proof of anonymity</a> first. 
   </span>
 </article>
 {{ end }}
