--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,3 +6,11 @@
   {{ .Content }}
 </article>
 {{ end }}
+
+{{ define "script" }}
+  {{ $targetPath := "js/thanks.js" }}
+  {{ $defines := dict "process.env.NODE_ENV" `"production"` }}
+  {{ $opts := dict "targetPath" $targetPath "defines" $defines }}
+  {{ $built := resources.Get $targetPath | js.Build $opts | fingerprint }}
+  <script type="text/javascript" src="{{ $built.RelPermalink }}" integrity="{{ $built.Data.Integrity }}" defer></script>
+{{ end }}
