--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
   <h1>{{ .Title }}</h1>
   <ul>
     {{ $years := .Scratch }}
-    {{ range .Pages }}
+    {{ range (where .Pages "Draft" false) }}
     {{ $year := .Date.Format "2006" }}
     {{ if not (in ($years.Get "years") $year) }}
       <h2>{{ .Date.Format "2006" }}</h2>
@@ -15,5 +15,20 @@
     </li>
     {{ end }}
   </ul>
+  {{ $draftsExist := (where .Pages "Draft" true) }}
+  {{ if $draftsExist }}
+  <h2>Drafts</h2>
+  <details>
+    <summary>You should prod me to finish these!</summary>
+    <ul>
+    {{ range sort (where .Pages "Draft" true) "Title" "asc" }}
+      <li>
+        <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+        <time>Last modified on {{ .Lastmod.Format "Jan 02, 2006" }}
+      </li>
+    {{ end }}
+    </ul>
+  </details>
+  {{ end }}
 </main>
 {{ end }}
