--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-<article class='{{ if not (isset .Params "noproseclass") }}prose lg:prose-xl dark:prose-dark{{ end }}'>
-  <div class='{{ if isset .Params "noproseclass" }}prose lg:prose-xl dark:prose-dark mb-12{{ end }}'>
+<article class='{{ if not (isset .Params "noproseclass") }}prose dark:prose-dark{{ end }}'>
+  <div class='{{ if isset .Params "noproseclass" }}prose dark:prose-dark mb-12{{ end }}'>
     <h1>{{ .Title }}</h1>
   </div>
   {{ .Content }}
