--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main class="prose lg:prose-xl dark:prose-dark">
+<main class="prose dark:prose-dark">
   <h1>{{ .Title }}</h1>
   <ul>
     <h2>Ongoing</h2>
