--- a/layouts/questions/list.html
+++ b/layouts/questions/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main class="prose lg:prose-xl dark:prose-dark">
+<main class="prose dark:prose-dark">
   <h1>Answers to questions I'll soon forget</h1>
   <ul>
     {{ range sort .Pages "Lastmod" "desc" }}
