--- a/layouts/reviews/single.html
+++ b/layouts/reviews/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article class="prose lg:prose-xl dark:prose-dark">
+<article class="prose dark:prose-dark">
   <header>
     <h1>{{ .Title }}</h1>
     <time datetime="{{ .Date }}">{{ .Date.Format "January 2, 2006" }}</time>
