[skip ci] Made font smaller, moved meta oias inline and allowed for full width display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,3 +25,11 @@
   opacity: 0;
   transition: opacity 1.5s linear;
 }
+
+.prose .fake-regular-width * {
+  @apply max-w-prose
+}
+
+.prose .fake-regular-width table {
+  @apply max-w-full
+}
