--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article class="prose lg:prose-xl dark:prose-dark">
+<article class="prose dark:prose-dark">
     <header>
         <h1>404 Not Found</h1>
     </header>
