--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
   {{ partial "head.html" . }}
   {{ block "style" . }}{{ end }}
   {{ block "json+ld" . }}{{ end }}
 </head>
-<body class="bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
+<body class="flex flex-col min-h-full bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
   {{ block "body" . }}
   {{ partial "header.html" . }}
-  <div class="container px-5 py-8 mx-auto ">{{ block "main" . }}{{ end }}</div>
+  <div class="flex-grow container px-5 py-8 mx-auto ">{{ block "main" . }}{{ end }}</div>
   {{ partial "footer.html" . }}
   {{ end }}
   {{ block "script" . }}{{ end }}
