--- a/layouts/questions/list.html
+++ b/layouts/questions/list.html
@@ -3,7 +3,8 @@
   <h1>Answers to questions I'll soon forget</h1>
   <form id="search" class="search" role="search">
     <label for="search-input">I'm curious about </label>
-    <input type="search" id="search-input" class="search-input" placeholder="kubernetes">
+    <input disabled type="search" id="search-input" class="search-input bg-gray-100">
+    <label class="text-red-500" id="error-output"></label>
   </form>
   <ul>
     {{ range sort .Pages "Lastmod" "desc" }}
