--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main class="prose dark:prose-dark">
+<main class="mx-auto prose dark:prose-dark">
   <h1>{{ .Title }}</h1>
   <ul>
     {{ $years := .Scratch }}
