--- a/layouts/debug/list.html
+++ b/layouts/debug/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main class="prose dark:prose-dark max-w-full">
+<main class="mx-auto prose dark:prose-dark max-w-full">
   <h1>{{ .Title }}</h1>
   <ul>
     {{ range sort .Pages }}
