--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article class="prose dark:prose-dark">
+<article class="mx-auto prose dark:prose-dark">
   <header class="w-min">
     <h1>
       {{ .Title }}
