--- a/layouts/questions/list.html
+++ b/layouts/questions/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main class="prose dark:prose-dark max-w-full">
+<main class="mx-auto prose dark:prose-dark">
   <h1>Answers to questions I'll soon forget</h1>
   <form id="search" class="search" role="search">
     <label for="search-input">I'm curious about </label>
