Fix dark mode border

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
     <p>Finally, if you have any questions or just want to drop a comment, you can pick your poison down in the bottom right of the footer.</p>
     <div id="liveplayer">
       <h4 class="pb-2">Currently listening to</h4>
-      <div class="rounded-xl space-y-6 border-4 dark:bg-black p-6">
+      <div class="rounded-xl space-y-6 border-4 dark:border-black p-6">
         <div class="player flex items-center space-x-3.5">
           <img src="https://i.scdn.co/image/ab67616d0000b27308ad1a5dc5b3ee3eac60ec94" width="640" height="640" class="flex-none w-24 h-24 rounded-lg bg-gray-200" id="cover" />
           <div class="player min-w-0 flex-auto space-y-0.5">
