--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,23 +12,26 @@
     <p>There's also a <a href="/now/">now</a> page for, realistically, what I was up to two weeks ago and a <a href="/projects/">projects</a> page documenting my small experiments.</p>
     <p>Finally, if you have any questions or just want to drop a comment, you can pick your poison down in the bottom right of the footer.</p>
     <div id="liveplayer">
-      <h4 class="pb-2">Currently listening to</h4>
+      <h4 class="pb-2" id="action">Currently doing some action</h4>
       <div class="rounded-xl space-y-6 border-4 dark:border-black p-6">
         <div class="player flex items-center space-x-3.5">
-          <img src="https://i.scdn.co/image/ab67616d0000b27308ad1a5dc5b3ee3eac60ec94" width="640" height="640" class="flex-none w-24 h-24 rounded-lg bg-gray-200" id="cover" />
+          <img src="https://i.scdn.co/image/ab67616d0000b27308ad1a5dc5b3ee3eac60ec94" width="640" height="640" class="flex-none rounded-lg bg-gray-200" id="cover" />
           <div class="player min-w-0 flex-auto space-y-0.5">
-            <p class="text-sm font-semibold uppercase" id="album">
+            <p class="text-sm font-semibold uppercase" id="category">
               A very cool album
             </p>
-            <h2 class="text-base font-semibold truncate" id="track">
-              An interesting song
+            <h2 class="text-base font-semibold" id="title">
+              The title of something
             </h2>
-            <p class="text-base font-medium" id="artist">
-              A great artist
+            <p class="text-base font-medium" id="source">
+              Where does this content come from?
+            </p>
+            <p class="text-base hidden" id="synopsis">
+              This is where a synopsis would go.
             </p>
           </div>
         </div>
-        <div class="space-y-2">
+        <div id="playback" class="space-y-2">
           <div class="bg-gray-200 transition-colors duration-500 dark:bg-black rounded-full overflow-hidden">
             <div class="bg-green-500 transition-colors duration-500 dark:bg-lime-400 w-0 h-1.5" role="progressbar" aria-valuenow="1456" aria-valuemin="0" aria-valuemax="4550" id="progress"></div>
           </div>
