--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
       <h4 class="pb-2" id="action">Currently doing some action</h4>
       <div class="rounded-xl space-y-6 border-4 dark:border-black p-6">
         <div class="player flex items-center space-x-3.5">
-          <img src="https://i.scdn.co/image/ab67616d0000b27308ad1a5dc5b3ee3eac60ec94" width="640" height="640" class="flex-none rounded-lg bg-gray-200" id="cover" />
+          <img src="" width="640" height="640" class="flex-none rounded-lg bg-gray-200" id="cover" />
           <div class="player min-w-0 flex-auto space-y-0.5">
             <p class="text-sm font-semibold uppercase" id="category">
               A very cool album
