Hide player (display: none) to fix homepage stretch

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,24 +11,16 @@
     <p>I maintain a <a href="/blog/">blog</a> and also keep a running lists of <a href="/questions/">questions</a> regarding topics I often want to remember things about for later.</p>
     <p>There's also a <a href="/now/">now</a> page for, realistically, what I was up to two weeks ago and a <a href="/projects/">projects</a> page documenting my small experiments.</p>
     <p>Finally, if you have any questions or just want to drop a comment, you can pick your poison down in the bottom right of the footer.</p>
-    <div id="liveplayer">
+    <div class="hidden" id="liveplayer">
       <h4 class="pb-2" id="action">Currently doing some action</h4>
       <div class="rounded-xl space-y-6 border-4 dark:border-black p-6">
         <div class="player flex items-center space-x-3.5">
           <img src="" width="640" height="640" class="flex-none rounded-lg bg-gray-200" id="cover" />
           <div class="player min-w-0 flex-auto space-y-0.5">
-            <p class="text-sm font-semibold uppercase" id="category">
-              A very cool album
-            </p>
-            <h2 class="text-base font-semibold" id="title">
-              The title of something
-            </h2>
-            <p class="text-base font-medium" id="source">
-              Where does this content come from?
-            </p>
-            <p class="text-base hidden" id="synopsis">
-              This is where a synopsis would go.
-            </p>
+            <p class="text-sm font-semibold uppercase" id="category"></p>
+            <h2 class="text-base font-semibold" id="title"></h2>
+            <p class="text-base font-medium" id="source"></p>
+            <p class="text-base hidden" id="synopsis"></p>
           </div>
         </div>
         <div id="playback" class="space-y-2">
