--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,3 +28,5 @@
   {{ $styles := $styles | minify | fingerprint | resources.PostProcess }}
   <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}" />
 {{ end }}
+
+<script defer data-domain="utf9k.net" src="https://plausible.io/js/plausible.js"></script>
