Proxy Plausible script for accuracy

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -30,3 +30,4 @@
 {{ end }}
 
 <script defer data-domain="utf9k.net" src="https://plausible.io/js/plausible.js"></script>
+<script defer data-api="https://utf9k.net/api/event" data-domain="utf9k.net" src="https://utf9k.net/pageview.js"></script>
