--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -30,5 +30,5 @@
 {{ end }}
 
 {{ if ne .Site.IsServer }}
-<script defer data-api='{{ getenv "RENDER_EXTERNAL_URL" }}/api/event' data-domain='{{ getenv "RENDER_EXTERNAL_HOSTNAME" }}' src='{{ getenv "RENDER_EXTERNAL_URL" }}/statistician.js'></script>
+<script defer data-api='https://utf9k.net/api/event' data-domain='utf9k.net' src='https://utf9k.net/statistician.js'></script>
 {{ end }}
