--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -10,6 +10,21 @@
 	@apply mb-0
 }
 
+#speech-bubble::after {
+  content: '';
+  position: absolute;
+  left: 0%;
+  top:  50%;
+  width: 0;
+  height: 0;
+  border: 8px solid transparent;
+  border-right-color: #DBEAFE;
+  border-left: 0;
+  border-bottom: 0;
+  margin-top: -4px;
+  margin-left: -8px;
+}
+
 .prose code::before, .prose code::after {
 	content: none;
 }
