--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -13,16 +13,32 @@
 #speech-bubble::after {
   content: '';
   position: absolute;
-  left: 0%;
-  top:  50%;
+  left: 50%;
+  top:  0%;
   width: 0;
   height: 0;
   border: 8px solid transparent;
-  border-right-color: #DBEAFE;
-  border-left: 0;
-  border-bottom: 0;
-  margin-top: -4px;
+  border-bottom-color: #DBEAFE;
+  border-top: 0;
+  margin-top: -6px;
   margin-left: -8px;
+}
+
+@media only screen and (min-width: 640px) {
+  #speech-bubble::after {
+    content: '';
+    position: absolute;
+    left: 0%;
+    top:  50%;
+    width: 0;
+    height: 0;
+    border: 8px solid transparent;
+    border-right-color: #DBEAFE;
+    border-left: 0;
+    border-bottom: 0;
+    margin-top: -4px;
+    margin-left: -6px;
+  }
 }
 
 .prose code::before, .prose code::after {
