--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="text-gray-600 body-font pt-12">
   <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
-    <img class="pr-4" src="/favicon.png" alt="The utf9k logo which is a cartoon robot">
+    <img class="sm:pr-4" src="/favicon.png" alt="The utf9k logo which is a cartoon robot">
     <p id="speech-bubble" class="relative p-3 bg-blue-100 rounded-lg shadow-sm text-sm text-gray-500 dark:text-gray-400 sm:mt-0 mt-4">{{ range $.Site.Data.gags.lines | shuffle | first 1 }}{{ . }}{{ end }}</p>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
       <a class="ml-3 text-gray-500 dark:text-gray-400" href="mailto:hello@utf9k.net">
