--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full">
+<html>
 <head>
   {{ partial "head.html" . }}
   {{ block "style" . }}{{ end }}
   {{ block "json+ld" . }}{{ end }}
 </head>
-<body class="flex flex-col min-h-full bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
-  {{ block "body" . }}
-  {{ partial "header.html" . }}
-  <div class="flex-grow container px-5 mx-auto ">{{ block "main" . }}{{ end }}</div>
-  {{ partial "footer.html" . }}
-  {{ end }}
-  {{ block "script" . }}{{ end }}
+<body>
+  <div class="relative h-screen bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
+    <div class="flex">
+      {{ block "body" . }}
+      {{ partial "header.html" . }}
+      <div class="p-8 container">
+      {{ block "main" . }}{{ end }}
+      </div>
+    </div>
+    {{ partial "footer.html" . }}
+    {{ end }}
+    {{ block "script" . }}{{ end }}
+  </div>
 </body>
 </html>
