--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,7 +10,7 @@
     <div class="flex flex-col min-h-screen">
       {{ block "body" . }}
       <div class="flex flex-row flex-grow">
-        {{ partial "header.html" . }}
+        {{ partial "sidebar.html" . }}
         <div class="p-12 container">
         {{ block "main" . }}{{ end }}
         </div>
