Update mobile portion of the sidebar

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,6 +8,7 @@
 <body>
   <div class="relative h-full bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
     <div class="flex flex-col min-h-screen">
+      {{ partial "mobilemenu.html" . }}
       {{ block "body" . }}
       <div class="flex flex-row flex-grow">
         {{ partial "sidebar.html" . }}
