--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,12 @@
 <footer class="text-gray-600 body-font pt-12">
-  <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
-    <img class="sm:pr-4" src="/favicon.png" alt="The utf9k logo which is a cartoon robot">
-    <p id="speech-bubble" class="relative p-3 bg-blue-100 rounded-lg shadow-sm text-sm text-gray-500 dark:text-gray-400 sm:mt-0 mt-4">{{ range $.Site.Data.gags.lines | shuffle | first 1 }}{{ . }}{{ end }}</p>
-    <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+  <div class="px-5 py-4 mx-auto flex items-center md:flex-row flex-col">
+    <img class="md:pr-4" src="/favicon.png" alt="The utf9k logo which is a cartoon robot">
+    <p id="speech-bubble" class="relative p-3 bg-blue-100 rounded-lg shadow-sm text-sm text-gray-500 dark:text-gray-400 md:mt-0 mt-4">{{ range $.Site.Data.gags.lines | shuffle | first 1 }}{{ . }}{{ end }}</p>
+    <div class="mx-auto px-6 pb-2 text-center text-xs text-gray-400 mt-4 md:mt-0">
+      <a class="text-purple-400" href="https://github.com/marcus-crane/utf9k/commit/{{ with .GitInfo }}{{ .Hash }}{{ end }}">{{ with .GitInfo }}{{ .AbbreviatedHash }}{{ end }}</a>
+      <p>This page last changed on {{ with .GitInfo }}{{ .AuthorDate.Format "January 2 2006" }}{{ end }}</p>
+    </div>
+    <span class="inline-flex md:ml-auto md:mt-0 mt-4 justify-center md:justify-start">
       <a class="ml-3 text-gray-500 dark:text-gray-400" href="mailto:hello@utf9k.net">
         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="at" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-5 h-5">
           <title>An at symbol, to symbolise an email address</title>
