--- a/layouts/partials/mobilemenu.html
+++ b/layouts/partials/mobilemenu.html
@@ -1,5 +1,5 @@
 <div class="md:hidden pl-3 pt-3">
-  <button type="button" class="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-gray-500 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+  <button id="mobileMenuToggle" type="button" class="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-gray-500 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
     <span class="sr-only">Open sidebar</span>
     <!-- Heroicon name: outline/menu -->
     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -11,3 +11,9 @@
     <span class="text-md font-medium title-font">utf9k</span>
   </a>
 </div>
+
+{{ $targetPath := (print "js/mobilenav.js") }}
+{{ $defines := dict "process.env.NODE_ENV" `"production"` }}
+{{ $opts := dict "targetPath" $targetPath "defines" $defines }}
+{{ $built := resources.Get $targetPath | js.Build $opts | fingerprint }}
+<script type="text/javascript" src="{{ $built.RelPermalink }}" integrity="{{ $built.Data.Integrity }}" defer></script>
