Update styling for post metadata

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,7 +11,7 @@
     {{ end }}
     <li>
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-      <time>{{ .Date.Format "Jan 02" }}</time>
+      <time class="pl-1 text-gray-500 text-xs font-medium uppercase tracking-wide">{{ .Date.Format "Jan 02" }}</time>
     </li>
     {{ end }}
   </ul>
