--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,9 @@
   <div class='{{ if isset .Params "maxwidth" }}fake-regular-width{{ end }}'>
     <div class='{{ if isset .Params "noproseclass" }}prose dark:prose-dark mb-12{{ end }}'>
       <h1>{{ .Title }}</h1>
-      {{ if (eq .Slug "now") }}<time>Last updated on {{ .Lastmod.Format "02 January 2006" }}</time>{{ end }}
+      <div class="text-gray-500 text-xs font-medium uppercase tracking-wide pt-2">
+        {{ if (eq .Slug "now") }}<time>Last updated on {{ .Lastmod.Format "02 January 2006" }}</time>{{ end }}
+      </div>
     </div>
     {{ .Content }}
   </div>
