--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -2,7 +2,9 @@
 <article class="mx-auto prose dark:prose-dark">
   <header>
     <h1>{{ .Title }}</h1>
-    <time datetime="{{ .Date }}">{{ if .Draft }}This is an unpublished draft{{ else }}{{ .Date.Format "January 2, 2006" }}{{ end }}</time> {{ if .Draft }} · <time datetime="{{ .Date }}">Last modified {{ .Lastmod.Format "January 2, 2006" }}{{ end }} · Around {{ .ReadingTime }} minute{{ if ne .ReadingTime 1 }}s{{ end }}
+    <div class="text-gray-500 text-xs font-medium uppercase tracking-wide pt-2">
+      <time datetime="{{ .Date }}">{{ if .Draft }}This is an unpublished draft{{ else }}{{ .Date.Format "January 2, 2006" }}{{ end }}</time> {{ if .Draft }} · <time datetime="{{ .Date }}">Last modified {{ .Lastmod.Format "January 2, 2006" }}{{ end }}</time> · Around {{ .ReadingTime }} minute{{ if ne .ReadingTime 1 }}s{{ end }}
+    </div>
   </header>
   <div id="post-body">
     {{ partial "toc.html" . }}
