--- a/layouts/reviews/single.html
+++ b/layouts/reviews/single.html
@@ -2,7 +2,9 @@
 <article class="mx-auto prose dark:prose-dark">
   <header>
     <h1>{{ .Title }}</h1>
-    <time datetime="{{ .Date }}">{{ .Date.Format "January 2, 2006" }}</time>
+    <div class="text-gray-500 text-xs font-medium uppercase tracking-wide pt-2">
+      <time datetime="{{ .Date }}">{{ .Date.Format "January 2, 2006" }}</time>
+    </div>
   </header>
   <div id="post-body">
     {{ partial "toc.html" . }}
