--- a/layouts/shortcodes/previewlink.html
+++ b/layouts/shortcodes/previewlink.html
@@ -21,4 +21,6 @@
   {{ else }}
   <a href="{{ .Inner }}">{{ .Inner }}</a>
   {{ end }}
+{{ else }}
+<a href="{{ .Inner }}">{{ .Inner }}</a>
 {{ end }}
